[gd_scene load_steps=2 format=3 uid="uid://dreg7meqsovtw"]

[ext_resource type="Script" uid="uid://bb5cucewfrxxm" path="res://Scripts/experiment.gd" id="1_6ecj1"]

[node name="Experiment" type="Node2D"]
script = ExtResource("1_6ecj1")

[node name="WaitForCard" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartText" type="Label" parent="."]
offset_left = 323.0
offset_top = 241.0
offset_right = 873.0
offset_bottom = 406.0
theme_override_font_sizes/font_size = 50
text = "Press Space start trial"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="WaitForCard" to="." method="_on_timer_timeout"]
